--- a/404.html
+++ b/404.html
@@ -1,7 +1,10 @@
 <script type="text/javascript">
-    // GitHub Pages에서 404가 발생할 때 index.html로 리다이렉트
     var redirectTo = window.location.pathname;
-    if (redirectTo.indexOf('/tech_curation') !== 0) {
-      window.location = '/tech_curation' + redirectTo;
+    var repoName = 'https://elky84.github.io/tech_curation';
+    
+    if (!redirectTo.startsWith(repoName)) {
+      window.location.href = repoName + redirectTo;
+    } else {
+      window.location.href = repoName + '/';
     }
   </script>
