--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 <script type="text/javascript">
     var redirectTo = window.location.pathname;
     var repoName = 'https://elky84.github.io/tech_curation';
-    
-    if (!redirectTo.startsWith(repoName)) {
-      window.location.href = repoName + redirectTo;
-    } else {
-      window.location.href = repoName + '/';
-    }
+
+  if (!window.location.pathname.startsWith(repoName)) {
+    var newPath = repoName + window.location.pathname;
+    window.history.replaceState(null, '', newPath);
+    window.location.reload();
+  }
   </script>
