deploy: 28ac2d845e733eb26d11345e513bff064c2000f1

--- a/404.html
+++ b/404.html
@@ -4,8 +4,10 @@
   <meta http-equiv="refresh" content="0; url=/" />
   <script type="text/javascript">
     var path = window.location.pathname;
-    var repoName = '/tech_curation';
-    var newUrl = repoName + '/#' + path;
+    var newUrl = '/#/';
+    if (path !== '/') {
+      newUrl += path;
+    }
     window.location.href = newUrl;
   </script>
 </head>
